# project_game

./: CMakeLists.txt  README.md
src/: Direction.cpp  Direction.h  FingerDetector.cpp  FingerDetector.h  Game.cpp  Game.h  HighScore.cpp  HighScore.h  Menu.cpp  Menu.h  Snake.cpp  Snake.h  config.txt  main.cpp
